--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 Changes to package support.BWS
 
+2015-04-27, version 0.1-3
+- Changed maintainer's email address
+
 2014-06-22, version 0.1-2
 - Changed maintainer's email address
 
